# flyio-demo

./: .dockerignore  Dockerfile  README.md  fly-test001.toml  fly.toml  pyproject.toml  test-srv1
.github/workflows/: fly-deploy.yml
.github/workflows-disabled/: fly-deploy.yml
Lesson/: 00-goal.md  01-hello-world.md  02-deploy-fastmcp-gitops.md  03-deploy-fastmcp-apiops.md  04-semi-functional-deployment.md  05-semi-functional-requirements.md
src/code_insight/: add_numbers.py  mcp_server.py
src/code_insight/static/: index.html
src/flyio_demo/code_insight/: __init__.py  mcp_server.py
